@@ -4,7 +4,6 @@ using Roguelike.Common.Utils;
 using Terraria;
 using Terraria.DataStructures;
 using Terraria.ID;
-using Terraria.ModLoader;
 
 namespace Roguelike.Contents.Transfixion.WeaponEnchantment.WoodBowEnchantments;
 public class WoodenBow : ModEnchantment {
@@ -12,11 +11,7 @@ public class WoodenBow : ModEnchantment {
 		ItemIDType = ItemID.WoodenBow;
 	}
 	public override void UpdateHeldItem(int index, Item item, EnchantmentGlobalItem globalItem, Player player) {
-		player.GetModPlayer<PlayerStatsHandle>().AddStatsToPlayer(PlayerStats.MovementSpeed, 1.1f);
 		globalItem.Item_Counter1[index] = ModUtils.CountDown(globalItem.Item_Counter1[index]);
-	}
-	public override void ModifyDamage(int index, Player player, EnchantmentGlobalItem globalItem, Item item, ref StatModifier damage) {
-		damage.Base += 1;
 	}
 	public override void Shoot(int index, Player player, EnchantmentGlobalItem globalItem, Item item, EntitySource_ItemUse_WithAmmo source, Vector2 position, Vector2 velocity, int type, int damage, float knockback) {
 		globalItem.Item_Counter1[index] = PlayerStatsHandle.WE_CoolDown(player, 60);
@@ -27,17 +22,9 @@ public class AshWoodBow : ModEnchantment {
 	public override void SetDefaults() {
 		ItemIDType = ItemID.AshWoodBow;
 	}
-	public override void ModifyDamage(int index, Player player, EnchantmentGlobalItem globalItem, Item item, ref StatModifier damage) {
-		damage.Base += 1;
-	}
 	public override void Shoot(int index, Player player, EnchantmentGlobalItem globalItem, Item item, EntitySource_ItemUse_WithAmmo source, Vector2 position, Vector2 velocity, int type, int damage, float knockback) {
 		globalItem.Item_Counter1[index] = PlayerStatsHandle.WE_CoolDown(player, 60);
 		Projectile.NewProjectile(source, position.PositionOFFSET(velocity, 30) + Main.rand.NextVector2Circular(10, 10), velocity, ProjectileID.WoodenArrowFriendly, damage, knockback, player.whoAmI);
-	}
-	public override void ModifyHitNPCWithProj(int index, Player player, EnchantmentGlobalItem globalItem, Projectile proj, NPC target, ref NPC.HitModifiers modifiers) {
-		if (target.HasBuff(BuffID.OnFire3) || target.HasBuff(BuffID.OnFire)) {
-			modifiers.SourceDamage += .25f;
-		}
 	}
 	public override void UpdateHeldItem(int index, Item item, EnchantmentGlobalItem globalItem, Player player) {
 		globalItem.Item_Counter1[index] = ModUtils.CountDown(globalItem.Item_Counter1[index]);
@@ -52,17 +39,9 @@ public class BorealWoodBow : ModEnchantment {
 	public override void SetDefaults() {
 		ItemIDType = ItemID.BorealWoodBow;
 	}
-	public override void ModifyDamage(int index, Player player, EnchantmentGlobalItem globalItem, Item item, ref StatModifier damage) {
-		damage.Base += 1;
-	}
 	public override void Shoot(int index, Player player, EnchantmentGlobalItem globalItem, Item item, EntitySource_ItemUse_WithAmmo source, Vector2 position, Vector2 velocity, int type, int damage, float knockback) {
 		globalItem.Item_Counter1[index] = PlayerStatsHandle.WE_CoolDown(player, 60);
 		Projectile.NewProjectile(source, position.PositionOFFSET(velocity, 30) + Main.rand.NextVector2Circular(10, 10), velocity, ProjectileID.WoodenArrowFriendly, damage, knockback, player.whoAmI);
-	}
-	public override void ModifyHitNPCWithProj(int index, Player player, EnchantmentGlobalItem globalItem, Projectile proj, NPC target, ref NPC.HitModifiers modifiers) {
-		if (target.HasBuff(BuffID.Frostburn) || target.HasBuff(BuffID.Frostburn2)) {
-			modifiers.SourceDamage += .25f;
-		}
 	}
 	public override void UpdateHeldItem(int index, Item item, EnchantmentGlobalItem globalItem, Player player) {
 		globalItem.Item_Counter1[index] = ModUtils.CountDown(globalItem.Item_Counter1[index]);
@@ -77,17 +56,9 @@ public class RichMahoganyBow : ModEnchantment {
 	public override void SetDefaults() {
 		ItemIDType = ItemID.RichMahoganyBow;
 	}
-	public override void ModifyDamage(int index, Player player, EnchantmentGlobalItem globalItem, Item item, ref StatModifier damage) {
-		damage.Base += 1;
-	}
 	public override void Shoot(int index, Player player, EnchantmentGlobalItem globalItem, Item item, EntitySource_ItemUse_WithAmmo source, Vector2 position, Vector2 velocity, int type, int damage, float knockback) {
 		globalItem.Item_Counter1[index] = PlayerStatsHandle.WE_CoolDown(player, 60);
 		Projectile.NewProjectile(source, position.PositionOFFSET(velocity, 30) + Main.rand.NextVector2Circular(10, 10), velocity, ProjectileID.WoodenArrowFriendly, damage, knockback, player.whoAmI);
-	}
-	public override void ModifyHitNPCWithProj(int index, Player player, EnchantmentGlobalItem globalItem, Projectile proj, NPC target, ref NPC.HitModifiers modifiers) {
-		if (target.HasBuff(BuffID.Poisoned)) {
-			modifiers.SourceDamage += .15f;
-		}
 	}
 	public override void UpdateHeldItem(int index, Item item, EnchantmentGlobalItem globalItem, Player player) {
 		globalItem.Item_Counter1[index] = ModUtils.CountDown(globalItem.Item_Counter1[index]);
@@ -102,9 +73,6 @@ public class EbonwoodBow : ModEnchantment {
 	public override void SetDefaults() {
 		ItemIDType = ItemID.EbonwoodBow;
 	}
-	public override void ModifyDamage(int index, Player player, EnchantmentGlobalItem globalItem, Item item, ref StatModifier damage) {
-		damage.Base += 1;
-	}
 	public override void UpdateHeldItem(int index, Item item, EnchantmentGlobalItem globalItem, Player player) {
 		globalItem.Item_Counter1[index] = ModUtils.CountDown(globalItem.Item_Counter1[index]);
 	}
@@ -117,9 +85,6 @@ public class ShadewoodBow : ModEnchantment {
 	public override void SetDefaults() {
 		ItemIDType = ItemID.ShadewoodBow;
 	}
-	public override void ModifyDamage(int index, Player player, EnchantmentGlobalItem globalItem, Item item, ref StatModifier damage) {
-		damage.Base += 1;
-	}
 	public override void UpdateHeldItem(int index, Item item, EnchantmentGlobalItem globalItem, Player player) {
 		globalItem.Item_Counter1[index] = ModUtils.CountDown(globalItem.Item_Counter1[index]);
 	}
@@ -131,9 +96,6 @@ public class ShadewoodBow : ModEnchantment {
 public class PalmWoodBow : ModEnchantment {
 	public override void SetDefaults() {
 		ItemIDType = ItemID.PalmWoodBow;
-	}
-	public override void ModifyDamage(int index, Player player, EnchantmentGlobalItem globalItem, Item item, ref StatModifier damage) {
-		damage.Base += 1;
 	}
 	public override void UpdateHeldItem(int index, Item item, EnchantmentGlobalItem globalItem, Player player) {
 		globalItem.Item_Counter1[index] = ModUtils.CountDown(globalItem.Item_Counter1[index]);
